--- a/food_truck_UI/src/index.html
+++ b/food_truck_UI/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://unpkg.com/angular-calendar@0.31.0/css/angular-calendar.css" rel="stylesheet">
   <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.2.1/css/all.css" rel="stylesheet">
 </head>
-<body class="h-100 overflow-hidden">
+<body class="h-100">
   <app-root></app-root>
 </body>
 </html>
